# igavis

./: README.md  isolation_patient_cameras.json  launch.json  make_video.sh  pyproject.toml  requirements.txt  setup_venv.sh
src/: main.py  setup_camera.py  setup_camera_config.json
src/cli/: argument_parser.py  camera_config.json
src/config/: argument_parser.py
src/core/: iga_pipeline.py  igb_pipeline.py  plotter.py  vtkobjects.py
src/igavis/: __init__.py  camera_config.json  main.py  setup_camera.py
src/igavis/config/: __init__.py  argument_parser.py
src/igavis/core/: __init__.py  iga_pipeline.py  igb_pipeline.py  plotter.py
src/igavis/io/: __init__.py  pyigb.py  readers.py
src/igavis/io/igb/: header.h  im_types.h
src/io/: pyigb.py  readers.py
src/io/igb/: header.c  igbwrapper.c  im_alloc.h  systeme.h  systemes.h  trame.h
