[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "igavis"
version = "0.1.0"
description = "Standalone visualization app for igb and iga mesh data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.4.6",
    "pyvista>=0.48.4",
    "vtk>=9.6.2",
    "rich>=15.0.0",
    "requests>=2.34.2",
    "pillow>=12.2.0"
]

[project.urls]
Homepage = "https://github.com/vgmarques17/igavis"

[project.scripts]
igavis = "igavis.main:main"
igavis-setup-camera = "igavis.setup_camera:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["igavis"]

[tool.setuptools.package-data]
"igavis" = ["camera_config.json"]
